Update docker-compose for deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
-version: '3'
 
+version: '3'
 services:
-  prometheus_fortigate_exporter:
+  exporter:
     build: ./
-    ports:
-      - 9710:9710
+    #ports:
+    #  - 9710:9710
     volumes:
       - ./fortigate-key.yaml:/config/fortigate-key.yaml
     command: ["-auth-file", "/config/fortigate-key.yaml", "-insecure"]
     restart: unless-stopped
+    networks:
+      - monitoring
+networks:
+  monitoring:
+    external: true
+
